--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,18 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+@font-face {
+  font-family: Vazir;
+  src: url("../assets/fonts/Vazir-Light.ttf");
+}
+
+* {
+  font-family: Vazir;
+}
+
+ion-navbar {
+  ion-title {
+    text-align: center;
+  }
+}
