--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,15 @@
 page-home {
+  .img-container {
+    width: 100%;
+    height: 50%;
 
+    ion-img {
+      width: 100%;
+      height: 250px;
+
+      img {
+        height: 100% !important;
+      }
+    }
+  }
 }
