--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,13 +3,14 @@ page-home {
     width: 100%;
     height: 50%;
 
-    ion-img {
+    img {
       width: 100%;
-      height: 250px;
-
-      img {
-        height: 100% !important;
-      }
+      height: 100%;
     }
+  }
+  
+  .btn-container {
+    position: absolute;
+    bottom: 10px;
   }
 }
