--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,7 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+// @import "../pages/home/home.scss";
 
 @font-face {
   font-family: Vazir;
@@ -32,4 +33,8 @@ ion-navbar {
   ion-title {
     text-align: center;
   }
+}
+
+.home {
+  background: linear-gradient(#83a4d4, #b6fbff);
 }
