--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,10 +1,24 @@
 page-home {
-  .img-container {
-    width: 100%;
-    height: 50%;
-    img {
-      width: 100%;
-      height: 100%;
+  ion-grid {
+    height: 100%;
+
+    ion-row {
+      height: 50%;
+
+      .round-btn {
+        text-decoration: none;
+        background: #ff3300;
+        color: #FFF;
+        width: 170px;
+        height: 170px;
+        line-height: 10px;
+        border-radius: 50%;
+        font-weight: bold;
+        font-size: 3em;
+        overflow: hidden;
+        box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.29);
+        border-bottom: solid 3px #bd6565;
+      }
     }
   }
 }
