--- a/src/pages/calculator/calculator.scss
+++ b/src/pages/calculator/calculator.scss
@@ -3,4 +3,12 @@ page-calculator {
     height: 87%;
     background-color: #f2f2f2 !important;
   }
+
+  .dist-content, .speed-content {
+    height: 10%;
+  }
+
+  .map-content {
+    height: 80%;
+  }
 }
