--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,7 +15,7 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-// @import '../../node_modules/leaflet/dist/leaflet.css';
+@import '../assets/leaflet_styles/leaflet.css';
 
 @font-face {
   font-family: Vazir;
