debug DB provider

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,7 +7,7 @@ page-home {
 
       .round-btn {
         text-decoration: none;
-        background: #ff3300;
+        // background: #ff3300;
         color: #FFF;
         width: 170px;
         height: 170px;
@@ -16,8 +16,7 @@ page-home {
         font-weight: bold;
         font-size: 3em;
         overflow: hidden;
-        box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.29);
-        border-bottom: solid 3px #bd6565;
+        box-shadow: 0 0 10px #000000;
       }
     }
   }
